# a2ml-haskell

./: CHANGELOG.md  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  ROADMAP.adoc  a2ml-haskell.cabal  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.machine_readable/: ADJUST.contractile  INTENT.contractile  MUST.contractile  TRUST.contractile
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
src/Data/: A2ML.hs
src/Data/A2ML/: Parser.hs  Renderer.hs  Types.hs
