-- SPDX-License-Identifier: MPL-2.0
-- (PMPL-1.0-or-later preferred; MPL-2.0 required for Hackage OSI-approved policy)
--
-- a2ml-haskell.cabal — Cabal package description for the a2ml library.

cabal-version:       2.4
name:                a2ml
version:             0.1.0.0
synopsis:            Parser and renderer for A2ML (Attested Markup Language)
description:
    A Haskell library for parsing and rendering A2ML (Attested Markup Language)
    documents. A2ML is an attestation-native markup format designed for documents
    that carry trust metadata, cryptographic attestations, and provenance
    information.
    .
    Features:
    .
    * Parse @.a2ml@ files into a typed Haskell AST
    * Render the AST back to A2ML surface syntax
    * Data types for manifests, attestations, trust levels, and directives
    * Round-trip fidelity: parse then render preserves document structure

license:             MPL-2.0
license-file:        LICENSE-MPL-2.0
author:              Jonathan D.A. Jewell
maintainer:          j.d.a.jewell@open.ac.uk
copyright:           Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath)
category:            Text, Data
build-type:          Simple
homepage:            https://github.com/hyperpolymath/a2ml-haskell
bug-reports:         https://github.com/hyperpolymath/a2ml-haskell/issues
extra-doc-files:     CHANGELOG.md
extra-source-files:  README.adoc

source-repository head
    type:     git
    location: https://github.com/hyperpolymath/a2ml-haskell.git

library
    exposed-modules:
        Data.A2ML
        Data.A2ML.Types
        Data.A2ML.Parser
        Data.A2ML.Renderer
    build-depends:
        base       >= 4.14 && < 5,
        text       >= 1.2  && < 2.2,
        containers >= 0.6  && < 0.8,
        bytestring >= 0.10 && < 0.13
    hs-source-dirs:   src
    default-language:  Haskell2010
    ghc-options:       -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints
